added comments to label beginning and end of code blocks

--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <!-- header section -->
     <header class="header">
       <h1 class="header-title">
         Bellarmine Financials - Balance Sheet Calculator
       </h1>
     </header>
+    <!-- End of header section -->
+
+    <!-- sub-heading sections -->
     <section class="sub-sections">
       <h2 class="sub-title">Assets</h2>
       <h2 class="sub-title">Liabilities</h2>
     </section>
+    <!-- End of sub-heading sections -->
 
     <!-- main section -->
     <main class="main-section">
